--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'action-package-version-bump'
-description: 'Github action to upgrade the package.json version and create a changelog based on PR description that can be triggered in your workflows'
+description: 'Github action to upgrade the package.json version and create a changelog based on PR description'
 inputs:
   repository:
     description: 'The repository where to pull the changes'
