fix: repository -> github.repositoryUrl

--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,7 @@ runs:
       - name: Pull and bump version
         shell: bash
         run: |
-          git remote add main-repo ${{ inputs.repository || github.repository }}
+          git remote add main-repo ${{ inputs.repository || github.repositoryUrl }}
           git config --global user.name ${{ inputs.user_name }}
           git config --global user.email ${{ inputs.user_email }}
           git config --global pull.rebase ${{ inputs.use_rebase }}
