--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,5 @@ jobs:
           use_rebase: true
           version_args: 'prerelease --preid=rc${{ env.RC_VERSION }}'
           node_version: ${{ env.NODE_VERSION }}
+          access_token: ${{ secrets.ACCESS_TOKEN }}
         uses: ./
