--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     types:
       - labeled
+  pull_request_target:
+    types:
+      - labeled
 env:
   NODE_VERSION: 16
 
@@ -19,14 +22,11 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Test bump action
         with:
           user_name: 'drassil-git-bot'
           user_email: 'drassil-git-bot@drassil.org'
           ref_branch: 'main'
-          use_rebase: true
           version_args: 'patch'
           node_version: ${{ env.NODE_VERSION }}
-          access_token: ${{ secrets.ACCESS_TOKEN }}
         uses: ./
