--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     types:
       - labeled
+  pull_request_target:
+    types:
+      - labeled
 env:
   NODE_VERSION: 16
 
@@ -26,5 +29,4 @@ jobs:
           ref_branch: 'main'
           version_args: 'patch'
           node_version: ${{ env.NODE_VERSION }}
-          access_token: ${{ secrets.ACCESS_TOKEN }}
         uses: ./
