--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,9 @@ inputs:
   access_token:
     description: 'Personal access token to clone the repository. Default: github.token'
     required: false
+  push_to_repo:
+    description: 'Push committed changes to the repository. Default: true'
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -61,6 +64,10 @@ runs:
           echo "Creating commit and pushing"
           git add -A
           git commit -m "chore: bump package version to $PACKAGE_VERSION and update changelog"
+      - name: Push
+        if: ${{ github.event.inputs.push_to_repo != 'false' }}
+        shell: bash
+        run: |          
           git push --force https://${{ inputs.access_token || github.token }}@github.com/${{ github.event.pull_request.head.repo.full_name }}
 
 
