--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,7 @@ runs:
           git add -A
           git commit -m "chore: bump package version to $PACKAGE_VERSION and update changelog"
       - name: Push
-        if: ${{ github.event.inputs.push_to_repo != 'false' }}
+        if: ${{ !github.event.inputs.push_to_repo }}
         shell: bash
         run: |          
           git push --force https://${{ inputs.access_token || github.token }}@github.com/${{ github.event.pull_request.head.repo.full_name }}
