--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,7 @@ inputs:
   push_to_repo:
     description: 'Push committed changes to the repository. Default: true'
     required: true
+    default: false
 runs:
   using: 'composite'
   steps:
