feat: implemented restore action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,16 @@ jobs:
           node_version: ${{ env.NODE_VERSION }}
         uses: ./
 
+      - name: Test restore action
+        with:
+          user_name: 'drassil-git-bot'
+          user_email: 'drassil-git-bot@drassil.org'
+          ref_branch: 'main'
+          version_args: 'patch'
+          node_version: ${{ env.NODE_VERSION }}
+          action: 'restore'
+        uses: ./
+
       - name: Test bump action (without push)
         with:
           user_name: 'drassil-git-bot'
