--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,12 @@ inputs:
     required: true
     type: boolean
     default: false
+  action:
+    description: 'Action to perform: "bump" or "restore"'
+    required: true
+    default: 'bump'
+
+
 runs:
   using: 'composite'
   steps:
@@ -47,8 +53,10 @@ runs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           fetch-depth: 0
           token: ${{ inputs.access_token || github.token }}
+
       - name: Pull and bump version
         shell: bash
+        if: inputs.action == 'bump'
         run: |
           git remote add main-repo https://github.com/${{ inputs.repository || github.repository }}
           git config --global user.name ${{ inputs.user_name }}
@@ -66,6 +74,27 @@ runs:
           echo "Creating commit and pushing"
           git add -A
           git commit -m "chore: bump package version to $PACKAGE_VERSION and update changelog"
+
+      - name: Restore 
+        if: inputs.action == 'restore'
+        run: |
+          # Get the name of the target branch
+          target_branch=$(gh pr view ${{ github.event.pull_request.number }} --json baseRefName -q '.baseRefName')
+
+          # Get the last common commit of the current PR branch and the target branch
+          common_commit=$(git merge-base HEAD $target_branch)
+
+          # Get the version of the package from the common commit
+          target_version=$(git show $common_commit:package.json | jq -r '.version')
+
+          # Update the version of the package in the current branch
+          jq ".version = \"$target_version\"" package.json > temp.json && mv temp.json package.json
+
+          # Replace the CHANGELOG.md content with the content of the CHANGELOG.md from the common commit
+          git show $common_commit:CHANGELOG.md > CHANGELOG.md
+
+          npm install --package-lock-only
+
       - name: Push
         if: ${{ inputs.skip_push != 'true' }}
         shell: bash
