--- a/action.yml
+++ b/action.yml
@@ -77,6 +77,7 @@ runs:
 
       - name: Restore 
         if: inputs.action == 'restore'
+        shell: bash
         run: |
           # Get the name of the target branch
           target_branch=$(gh pr view ${{ github.event.pull_request.number }} --json baseRefName -q '.baseRefName')
