--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,15 @@ permissions:
   pull-requests: write
 
 jobs:
-  version-bump:
+  version-bump-test-1:
     if: github.event.label.name == 'pr-version-bump'
     runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
+
       - name: Test bump action
         with:
           user_name: 'drassil-git-bot'
@@ -44,6 +45,15 @@ jobs:
           node_version: ${{ env.NODE_VERSION }}
           action: 'restore'
         uses: ./
+
+  version-bump-test-2:
+    if: github.event.label.name == 'pr-version-bump'
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
       - name: Test bump action (without push)
         with:
