--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 #      - labeled
 #
 # pull_request_target -> GITHUB_TOKEN has write permissions external forks
-  pull_request_target:
+  pull_request:
     types:
       - labeled
 
