--- a/action.yml
+++ b/action.yml
@@ -83,6 +83,7 @@ runs:
         if: inputs.action == 'restore'
         shell: bash
         run: |
+          set -x
           # Get the name of the target branch
           target_branch=$(echo "${{ github.event.pull_request }}" | jq -r .base.ref)
 
